# WEARLYZE

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTIONS.md  Dockerfile  Makefile  README.md  convert_deepfashion2_to_yolo.py  docker-compose.yml  generate_masks.py  pyproject.toml  requirements.txt  run_deepfashion2_training.sh  setup.py  test_deepfashion2_setup.py  test_landmarks.py  test_model.py  test_segmentation.py  train.py  train_deepfashion2.py  train_deepfashion2_optimized.py  train_example.sh  train_local_example.py  train_rtx4060.sh  train_rtx4060_optimized.py  train_with_masks.py
config/: default_config.yaml
configs/: deepfashion2_config.yaml  deepfashion2_config_optimized.yaml
data/: README.md  __init__.py  dataloader.py  dataset.py  example_usage.py  requirements.txt  s3_loader.py  transforms.py  utils.py
models/: CLASSIFICATION_README.md  README.md  __init__.py  classification_example.py  classification_requirements.txt  classifiers.py  clip_model.py  ensemble.py  example_usage.py  fashion_embeddings.py  index_builder.py  losses.py  model_factory.py  quantization.py  requirements.txt  retrieval_utils.py  similarity_search.py  yolo_config.py  yolo_segmentation.py  yolo_trainer.py  yolo_utils.py
training/: experiment_manager.py  schedulers.py  trainer.py
ui/: README.md  download_clip.py  fashion_segmentation_ui.py  generate.py  requirements.txt
utils/: metrics.py  visualization.py
